pxc/tests/test_019_thread/thrtest4.px
import common -;

namespace thrtest4;
import thread -;

threaded struct my_thread_obj(int x0, int y0, io::io const& iop0) {
  int x = x0;
  int y = y0;
  io::io iop = iop0;
  function void main() {
    // iop.println("my thread main");
    // iop.println(x);
  }
}

thread_t thr = make_thread(my_thread_obj(123, 456, io::system));
  // error: my_thread_obj is not multithreaded
thr.join();

